<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="#EEEEEEEE">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/icon_signup"
        android:id="@+id/sign_up_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_text"
        android:text="@string/sign_up_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/sign_up_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_image"
        android:layout_marginTop="24dp"
        android:text="@string/name_label"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/name_field"
        android:inputType="text"
        android:background="@android:color/white"
        android:hint="@string/name_hint"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/text_name"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_field"
        android:layout_marginTop="16dp"
        android:text="@string/email_label"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/email_field"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/text_email"
        android:hint="@string/email_hint"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_marginTop="24dp"
        android:text="@string/password_label"
        android:textSize="18dp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password_field"
        android:inputType="textWebPassword"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/text_password"
        android:background="@android:color/white"
        android:hint="@string/pasword_hint"/>

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_marginTop="16dp"
        android:text="@string/city_label"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/city_field"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:layout_below="@+id/text_city"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/button_signUp"
        android:layout_alignParentBottom="true"
        android:text="@string/button_signUp"
        android:textSize="20dp"/>

    <ProgressBar
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:indeterminate="true"
        android:background="@android:color/white"
        android:layout_centerInParent="true"
        android:max="100"
        android:id="@+id/prog_sign_up"/>

</RelativeLayout>