<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_back_food"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:background="?attr/colorAccent">
    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_back_food"
        android:text="@string/name_label"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_title_food"
        android:hint="@string/food_name_hint"
        android:background="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:layout_below="@+id/name_label"/>

    <TextView
        android:id="@+id/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title_food"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_calories"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_cal"
        android:hint="@string/start_value"
        android:background="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:layout_below="@+id/calorie"
        />


    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
       android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/add_label"
        android:textSize="18dp" />

</RelativeLayout>