<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEEEE">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_back_thought"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:background="?attr/colorAccent">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_back_thought"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_label"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/title_label"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:hint="@string/title_hint"
        android:padding="8dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/thought_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_Title"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/thought_label"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_thought"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/thought_label"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:gravity="top"
        android:hint="@string/thought_hint"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edit_thought"
        android:layout_margin="8dp"
        android:text="@string/add_label"
        android:textSize="18dp" />


</RelativeLayout>