<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="itp341.gonzalez.edwin.feelwellapp.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:src="@drawable/icon" />

    <ProgressBar
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:id="@+id/progress_bar"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:indeterminate="true"
        android:max="100"

        />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_label"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/edit_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/label_email"
        android:layout_alignStart="@+id/label_email"
        android:background="@android:color/white"
        style="@style/Widget.AppCompat.EditText"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/edit_email"
        android:layout_below="@id/edit_email"
        android:text="@string/password_label"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/edit_password"
        android:hint="@string/pasword_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/label_password"
        android:layout_alignStart="@+id/label_email"
        android:background="@android:color/white"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
         />


</RelativeLayout>
