<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/title_bar"
        android:text="@string/fitness_activity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/title_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/activity_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/duration_amount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black"
        android:layout_below="@+id/activity_label"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_button"
        android:background="@android:color/white"
        android:id="@+id/add_fitness_activity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:id="@+id/list_fitness"
        android:layout_below="@+id/activity_label"
        />


</RelativeLayout>