<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:id="@+id/title_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/foood_activity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/total_cal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_calories"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_cal_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/start_value"
        android:id="@+id/num_calories"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black"
        android:id="@+id/line"
        android:layout_below="@+id/total_cal_label"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_food"
        android:src="@drawable/add_button"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:id="@+id/foods_list"
        android:layout_below="@id/line"
        />


</RelativeLayout>